# snippets

./: README.md  TestProject.cbp  TestProject.depend  TestProject.layout  main.cpp
cpp/: avl_tree.h  avl_tree_test.c  benchmark_list_vs_vector.cpp  clipboard_viewer2.c  concave_polygon_stencil_buffer.c  find_sorting_network.cpp  glut_shader_skeleton.cpp  glut_skeleton.cpp  k_subsets_iteratively.c  load_bmp.c  mergesort_linked_lists.c  overload_number_of_arguments.c  screenshot.c  vec2.hpp  waves.cpp  write_bitmap_bmp.cpp  xorshift.c
cpp/cmake/: CMakeLists.txt  Makefile  main.cpp
graphics/: color.hpp  shader.hpp  vertex.hpp
math/: mat.hpp  util.hpp
nn/: medium_nn.py  nn.cpp  nn.py  primes.py  short_nn - Copy.py  simd_mat4f.hpp  simd_nn.cpp  small_nn.py  static_nn.cpp
py/: 16bit_sine_approximation.py  alarm.py  avl_tree.py  benchmark_tensorflow.py  bilateral_filter.py  block_matrix_LU.py  block_matrix_inverse.py  bloom_filter.py  bruteforce_crc32_cuda_cupy.py  calculate_scale_offset.py  color_conversion.py  color_difference.py  crack_crc32_z3.py  crypt_images.py  distance_matrix.py  durand_kerner_polynomial_roots.py  fast_word_find.py  fft_fast_integer_multiplication.py  fftconv.py  fixed_point_number.py  flatten_nested.py  graph_plot.py  hex_grid.py  laderman_matrix_mul.py  lup_decomposition.py  mandelbrot.py  my_pca.py  padding_oracle_attack.py  persistent_data_structures.py  pi_digits.py  powe rmethod.py  prime_sieve_miller_rabin_lucas_lehmer.py  read_tar.py  resize_area.py  rsa.py  sdf.py  shortest_path.py  smallest_enclosing_circle_baseline.py  stream_tar.py  (+7 more)
(+263 files in other folders)
